--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,3 +1,8 @@
-<h1>
-  {{title}}
-</h1>
+<div class="row">
+	<div class="col-md-8 col-md-offset-2">
+			<h1>
+	  			{{title}}
+			</h1>
+			<router-outlet></router-outlet>
+	</div>	
+</div>
