--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,16 @@
 <div class="row">
 	<div class="col-md-8 col-md-offset-2">
-			<h1>
-	  			{{title}}
-			</h1>
-			<router-outlet></router-outlet>
+		<div class="row vertical-align">
+			<div class="col-md-9">
+				<h1>{{title}}</h1>
+			</div>
+			<div class="col-md-2">
+				<span class="pull-right" *ngIf="checkUserLogin()">Hello, {{userName()}}!</span>
+			</div>
+			<div class="col-md-1">
+				<span class="pull-right" *ngIf="checkUserLogin()"><a href="javascript:void(0)" (click)="logout()">Logout</a></span>
+			</div>
+		</div>
+		<router-outlet></router-outlet>
 	</div>	
 </div>
